--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css"
     />
-    <title>My E-commerce project</title>
+    <title>My E-ecommerce project</title>
     <link rel="stylesheet" href="responsive.css" />
     <link rel="stylesheet" href="style.css" />
   </head>
